--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "~12.0.0",
         "eslint": "^8.14.0",
         "materialize-css": "^1.0.0",
+        "ngx-toastr": "^14.3.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.1.0",
         "zone.js": "~0.11.4"
