--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~12.0.0",
         "@angular/platform-browser-dynamic": "~12.0.0",
         "@angular/router": "~12.0.0",
+        "angular-event-emitter": "^0.0.1",
         "eslint": "^8.14.0",
         "materialize-css": "^1.0.0",
         "ngx-toastr": "^14.3.0",
